<resources>
    <string name="app_name">Tema_4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testari_covid">Testari covid</string>
    <string name="afiseaza_centrele">Afiseaza centrele</string>
    <string name="afiseaza_rezultatele">Afiseaza rezultatele</string>
    <string name="adaugare_centre">Adaugare centre</string>
    <string name="grafic">Grafic</string>
    <string name="hospital_image">hospital image</string>
    <string name="denumire">Denumire</string>
    <string name="adresa">Adresa</string>
    <string name="judet">Judet</string>
    <string name="telefon">Telefon</string>
    <string name="introduceti_datele">Introduceti datele</string>
    <string name="adauga">Adauga centrul</string>
    <string name="introduceti_denumirea">Introduceti denumirea!</string>
    <string name="introduceti_adresa">Introduceti adresa!</string>
    <string name="introduceti_judetul">Introduceti judetul!</string>
    <string name="introduceti_telefonul">Introduceti un numar de telefon valid!</string>
    <string name="default_value">-</string>
    <string name="test_image">test image</string>
    <string name="rezultat">Rezultat</string>
    <string name="numar_anticorpi">Numar Anticorpi</string>
    <string name="rezultatul_testului">rezultatul testului</string>
    <string name="nr_anticorpi">nr anticorpi</string>
    <string name="vaccinat">Vaccinat</string>
    <string name="da_nu">da/nu</string>
    <string name="tip_test">tip test</string>

    <string name="chart_legend_template">%1s-%2d</string>
</resources>