<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/popa_alexandra_iv_test"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/test_result_pictogram"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/test_image"/>

    <TextView
        android:id="@+id/popa_alexandra_tv_rezultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/popa_alexandra_iv_test"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/popa_alexandra_tv_rezultat_test"
        android:text="@string/rezultat"
        android:textColor="#B7070505"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/popa_alexandra_tv_rezultat_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/popa_alexandra_tv_rezultat"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/popa_alexandra_tv_tip_test"
        android:text="@string/rezultatul_testului"
        android:textColor="#B7070505"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/popa_alexandra_tv_tip_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/popa_alexandra_tv_rezultat_test"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tip_test"
        android:textColor="#B7070505"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/popa_alexandra_tv_anticorpi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/popa_alexandra_iv_test"
        app:layout_constraintTop_toBottomOf="@id/popa_alexandra_tv_rezultat"
        app:layout_constraintEnd_toStartOf="@id/popa_alexandra_tv_numar_anticorpi"
        android:text="@string/numar_anticorpi"
        android:textColor="#B7070505"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/popa_alexandra_tv_numar_anticorpi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/popa_alexandra_tv_anticorpi"
        app:layout_constraintTop_toBottomOf="@id/popa_alexandra_tv_rezultat"
        app:layout_constraintEnd_toStartOf="@id/popa_alexandra_tv_vaccinat"
        android:text="@string/nr_anticorpi"
        android:textColor="#B7070505"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/popa_alexandra_tv_vaccinat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/popa_alexandra_tv_numar_anticorpi"
        app:layout_constraintTop_toBottomOf="@id/popa_alexandra_tv_rezultat"
        app:layout_constraintEnd_toStartOf="@id/popa_alexandra_tv_este_vaccinat"
        android:text="@string/vaccinat"
        android:textColor="#B7070505"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/popa_alexandra_tv_este_vaccinat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/popa_alexandra_tv_vaccinat"
        app:layout_constraintTop_toBottomOf="@id/popa_alexandra_tv_rezultat"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/da_nu"
        android:textColor="#B7070505"
        android:fontFamily="sans-serif-condensed-medium"/>


</androidx.constraintlayout.widget.ConstraintLayout>