<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity"
    android:background="@drawable/hospital_img">

    <TextView
        android:id="@+id/popa_alexandra_tv_introduceti_datele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/introduceti_datele"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/popa_alexandra_til_denumire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popa_alexandra_tiet_denumire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/denumire"
            android:fontFamily="sans-serif-condensed-medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/popa_alexandra_til_adresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popa_alexandra_til_denumire"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popa_alexandra_tiet_adresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adresa"
            android:fontFamily="sans-serif-condensed-medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/popa_alexandra_til_judet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popa_alexandra_til_adresa"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popa_alexandra_tiet_judet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/judet"
            android:fontFamily="sans-serif-condensed-medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/popa_alexandra_til_telefon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popa_alexandra_til_judet"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popa_alexandra_tiet_telefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefon"
            android:fontFamily="sans-serif-condensed-medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/popa_alexandra_btn_adaugare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/adauga"
        android:textColor="#B7070505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popa_alexandra_til_telefon"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>